--- a/Aps 7.ipynb
+++ b/Aps 7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,82 +25,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "n=16\n",
-    "df=10\n",
-    "m0=90\n",
-    "m_=95\n",
-    "t0=(m_-m0)/(s/math.sqrt(n))\n",
-    "Tc=stats.t.ppf((1-0.1),doof=n) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "t0=(m_-m0)/(s/math.sqrt(n))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1020.1538461538462\n",
-      "1033.8461538461538\n"
+      "Média:  347.0\n",
+      "Desvio padrao  7.990601622263139\n"
      ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAD8CAYAAABw1c+bAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEVtJREFUeJzt3G+MXFd5x/Hv0zVpTBA1kLJNbZf1C6toYVXhbo37B7Qq\nrRQnqE7Fm0QBk6iSaynhT7WoXVAR9E0VEGkhShTLAldEUCKRUtWq3ab/GFVUTeqEpHEc12Ixbm1j\nGhAisI5K2PL0xVxX4/Gu987u3dnZOd+PNPLcc8+5e56c3V/u3Jm5kZlIksrxE2s9AUlSfxn8klQY\ng1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMJsWOsJLOT666/PsbGxRo958eJFrrvuukaP\nOcisd7iVVG9JtcLy633yySe/k5k/XafvQAb/2NgYTzzxRKPHbLVaTE1NNXrMQWa9w62kekuqFZZf\nb0T8Z92+XuqRpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCDOQ3d6WljM0c\nuWx7emKeO7raVsOZe25e9Z8hrTbP+CWpMAa/JBXG4Jekwhj8klQY39yVetD9pnK/+KaymuQZvyQV\nxuCXpMLUCv6IuDEiTkXEbETMLLD/9RHxrxHxw4j4QC9jJUn9tWTwR8QI8ACwGxgHbouI8a5u3wXe\nC3xiGWMlSX1U54x/JzCbmacz8yXgYWBPZ4fMfD4zjwE/6nWsJKm/6gT/ZuBsx/a5qq2OlYyVJK2C\ngfk4Z0TsA/YBjI6O0mq1Gj3+3Nxc48ccZMNe7/TE/GXboxuvbBsm3Ws57OvbqaRaoT/11gn+88DW\nju0tVVsdtcdm5kHgIMDk5GROTU3V/BH1tFotmj7mIBv2ertvyDY9Mc+9xwfmPKZxZ26fumx72Ne3\nU0m1Qn/qrXOp5xiwPSK2RcQ1wK3A4ZrHX8lYSdIqWPIUKTPnI+Ju4FFgBDiUmSciYn+1/0BE/Azw\nBPBK4McR8X5gPDO/v9DY1SpGkrS0Wq+NM/MocLSr7UDH82/RvoxTa6wkae34zV1JKozBL0mFMfgl\nqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IK\nY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAG\nvyQVxuCXpMIY/JJUmFrBHxE3RsSpiJiNiJkF9kdE3FftfyYidnTs+72IOBERz0bEFyLi2iYLkCT1\nZsngj4gR4AFgNzAO3BYR413ddgPbq8c+4MFq7GbgvcBkZr4RGAFubWz2kqSe1Tnj3wnMZubpzHwJ\neBjY09VnD/BQtj0GbIqIG6p9G4CNEbEBeDnwzYbmLklahjrBvxk427F9rmpbsk9mngc+AfwXcAF4\nITP/bvnTlSSt1IbVPHhEvIr2q4FtwPeAL0bEOzPzcwv03Uf7MhGjo6O0Wq1G5zI3N9f4MQfZsNc7\nPTF/2fboxivbhkn3Wg77+nYqqVboT711gv88sLVje0vVVqfPbwDfyMxvA0TEl4BfAa4I/sw8CBwE\nmJyczKmpqXoV1NRqtWj6mINs2Ou9Y+bIZdvTE/Pce3xVz2PW1Jnbpy7bHvb17VRSrdCfeutc6jkG\nbI+IbRFxDe03Zw939TkM7K0+3bOL9iWdC7Qv8eyKiJdHRABvA042OH9JUo+WPEXKzPmIuBt4lPan\ncg5l5omI2F/tPwAcBW4CZoEXgTurfY9HxCPAV4F54Cmqs3pJ0tqo9do4M4/SDvfOtgMdzxO4a5Gx\nHwE+soI5SpIa5Dd3JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG\n4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+\nSSrMhrWegNavsZkjaz0FScvgGb8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqTK3gj4gbI+JURMxG\nxMwC+yMi7qv2PxMROzr2bYqIRyLiPyLiZET8cpMFSJJ6s2TwR8QI8ACwGxgHbouI8a5uu4Ht1WMf\n8GDHvk8Bf5uZrwd+ATjZwLwlSctU54x/JzCbmacz8yXgYWBPV589wEPZ9hiwKSJuiIifAt4KfAYg\nM1/KzO81OH9JUo/qBP9m4GzH9rmqrU6fbcC3gT+LiKci4tMRcd0K5itJWqHVvmXDBmAH8J7MfDwi\nPgXMAB/u7hgR+2hfJmJ0dJRWq9XoRObm5ho/5iDrR73TE/OrevxejG4crPk0rXstS/p9LqlW6E+9\ndYL/PLC1Y3tL1VanTwLnMvPxqv0R2sF/hcw8CBwEmJyczKmpqRpTq6/VatH0MQdZP+q9Y4Du1TM9\nMc+9x4f41lPHL162OT3xv9z7lYuLdG7WmXtu7svPWYx/u82rc6nnGLA9IrZFxDXArcDhrj6Hgb3V\np3t2AS9k5oXM/BZwNiJ+vur3NuC5piYvSerdkqdImTkfEXcDjwIjwKHMPBER+6v9B4CjwE3ALPAi\ncGfHId4DfL76n8bprn2SpD6r9do4M4/SDvfOtgMdzxO4a5GxTwOTK5ijJKlBfnNXkgpj8EtSYQx+\nSSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jek\nwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqM\nwS9JhTH4JakwBr8kFaZW8EfEjRFxKiJmI2Jmgf0REfdV+5+JiB1d+0ci4qmI+OumJi5JWp4lgz8i\nRoAHgN3AOHBbRIx3ddsNbK8e+4AHu/a/Dzi54tlKklaszhn/TmA2M09n5kvAw8Cerj57gIey7TFg\nU0TcABARW4CbgU83OG9J0jLVCf7NwNmO7XNVW90+nwR+H/jxMucoSWrQhtU8eES8HXg+M5+MiKkl\n+u6jfZmI0dFRWq1Wo3OZm5tr/JiDrB/1Tk/Mr+rxezG6cbDms9r6We9a/934t9u8OsF/Htjasb2l\naqvT5x3Ab0XETcC1wCsj4nOZ+c7uH5KZB4GDAJOTkzk1NVW3hlparRZNH3OQ9aPeO2aOrOrxezE9\nMc+9x1f1PGag9LPeM7dP9eXnLMa/3ebVudRzDNgeEdsi4hrgVuBwV5/DwN7q0z27gBcy80JmfjAz\nt2TmWDXunxYKfUlS/yx5ypCZ8xFxN/AoMAIcyswTEbG/2n8AOArcBMwCLwJ3rt6UJUkrUeu1YmYe\npR3unW0HOp4ncNcSx2gBrZ5nKElqlN/claTCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/\nJBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtS\nYQx+SSrMhrWegFZubObIFW3TE/PcsUC7JHnGL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtS\nYQx+SSpMreCPiBsj4lREzEbEzAL7IyLuq/Y/ExE7qvatEfHliHguIk5ExPuaLkCS1Jslgz8iRoAH\ngN3AOHBbRIx3ddsNbK8e+4AHq/Z5YDozx4FdwF0LjJUk9VGdWzbsBGYz8zRARDwM7AGe6+izB3go\nMxN4LCI2RcQNmXkBuACQmT+IiJPA5q6xkgbYQrcE6Ycz99y8Jj+3BHUu9WwGznZsn6vaeuoTEWPA\nm4DHe52kJKk5fblJW0S8AvgL4P2Z+f1F+uyjfZmI0dFRWq1Wo3OYm5tr/JiDYnpi/oq20Y0Ltw8r\n6x0+l/5eh/lvdyH9qLdO8J8HtnZsb6naavWJiJfRDv3PZ+aXFvshmXkQOAgwOTmZU1NTNaZWX6vV\nouljDoqF7sI5PTHPvcfLufmq9Q6fM7dPAcP9t7uQftRb51LPMWB7RGyLiGuAW4HDXX0OA3urT/fs\nAl7IzAsREcBngJOZ+SeNzlyStCxLnjJk5nxE3A08CowAhzLzRETsr/YfAI4CNwGzwIvAndXwXwXe\nBRyPiKertg9l5tFmy5Ak1VXrtWIV1Ee72g50PE/grgXGfQWIFc5RktQgv7krSYUx+CWpMAa/JBXG\n4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+\nSSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqzIa1nsCwGJs5stZTkKRaDH5J\nA+nSydT0xDx39PnE6sw9N/f15/Wbl3okqTAGvyQVxuCXpMIY/JJUmFrBHxE3RsSpiJiNiJkF9kdE\n3FftfyYidtQdK0nqryWDPyJGgAeA3cA4cFtEjHd12w1srx77gAd7GCtJ6qM6H+fcCcxm5mmAiHgY\n2AM819FnD/BQZibwWERsiogbgLEaYxu12Ofp1+IjYZI0iOoE/2bgbMf2OeDNNfpsrjlWkgbKWn0h\ns1/fHxiYL3BFxD7al4kA5iLiVJPHfy9cD3ynyWMOMusdbiXVW1Kt8TFg+fW+rm7HOsF/Htjasb2l\naqvT52U1xgKQmQeBgzXmsywR8URmTq7W8QeN9Q63kuotqVboT711PtVzDNgeEdsi4hrgVuBwV5/D\nwN7q0z27gBcy80LNsZKkPlryjD8z5yPibuBRYAQ4lJknImJ/tf8AcBS4CZgFXgTuvNrYValEklRL\nrWv8mXmUdrh3th3oeJ7AXXXHrpFVu4w0oKx3uJVUb0m1Qh/qjXZmS5JK4S0bJKkw6zr4I+JQRDwf\nEc92tL06Iv4+Ir5W/fuqqv01EfHliJiLiPu7jtOqbivxdPV4bb9rWUqPtf5mRDwZEcerf3+9Y8wv\nVu2z1W02Yi3qWUqD9Q782kLP9e7sqOffI+K3O8YM4/perd6BX99eau3Y/3NVVn2go625tc3MdfsA\n3grsAJ7taPs4MFM9nwE+Vj2/Dvg1YD9wf9dxWsDkWtfTYK1vAn62ev5G4HzHmH8DdgEB/A2we61r\nW+V6B35tl1Hvy4EN1fMbgOc7todxfa9W78Cvby+1dux/BPgi8IGOtsbWdl2f8WfmPwPf7WreA3y2\nev5Z4Jaq78XM/ArwP/2bYXN6rPWpzPxm1X4C2BgRPxnt22i8MjMfy/Zv0kOXxgyaJurty0Qb0mO9\nL2bmfNV+LZAAQ7y+C9a7XvRSK0BE3AJ8g/bv8qW2Rtd2XQf/Ikaz/R0CgG8BozXHfbZ6qfjhQX15\nvIA6tb4D+Gpm/pD2LTTOdey7dGuN9aLXei9Zj2sLV6k3It4cESeA48D+KhiHdn0XqfeS9bi+C9Ya\nEa8A/gD4o67+ja7tMAb//6v+z1jn7OD2zHwD8Jbq8a5VndgqWKjWiHgD8DHgd9dkUquoh3rX/drC\nlfVm5uNVXb8EfDAirl2zya2CHupd9+vbVetHgT/NzLnV/JnDGPz/Xb0suvTy6PmlBmTm+erfHwB/\nTvuOpOvBorVGxBbgL4G9mfn1qvk87dtmXLLoLTQGVK/1rue1hRq/y5l5Epijem+DIV3fS7rqXc/r\nu1itbwY+HhFngPcDH4r2l2AbXdthDP7DwLur5+8G/upqnSNiQ0RcXz1/GfB24NmrjRkgC9YaEZuA\nI7TfPPqXS52rl5bfj4hd1UvivSzx32fA9FTvOl9bWLzebRGxoXr+OuD1wJkhXt8F613n67tgrZn5\nlswcy8wx4JPAH2fm/Y2v7Vq/472SB/AF4ALwI9rXvH4HeA3wj8DXgH8AXt3R/wztN1nmqv7jtD/t\n8yTwDO03Uz4FjKx1bSupFfhD4CLwdMfjtdW+Sdp/HF8H7qf6Et+gPZqod72s7TLqfVdVz9PAV4Fb\nOo4zjOu7YL3rZX17zamOcR/l8k/1NLa2fnNXkgozjJd6JElXYfBLUmEMfkkqjMEvSYUx+CWpMAa/\nJBXG4Jekwhj8klSY/wP6A9TFaMoCeAAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1a0e03aaf28>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
+   "source": [
+    "dados = [344.5, 352.9, 355.0, 348.8, 342.0, 344.7, 346.9, 340.9, 357.7, 341.2, 347.1, 365.3, 340.3, 343.2, 342.6, 333.7, 341.9, 351.0, 348.0, 354.3, 344.9, 348.0, 346.4, 358.0, 340.2, 354.4, 349.7, 339.4, 338.8, 344.9, 330.4, 341.7, 336.7, 363.2, 355.9, 357.4]\n",
+    "dados = pd.Series(dados)\n",
+    "n=16\n",
+    "dp_l = np.std(dados,ddof=1)\n",
+    "x_l = dados.mean()\n",
+    "\n",
+    "\n",
+    "print(\"Média: \", x_l)\n",
+    "print(\"Desvio padrao \", dp_l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.11323362111\n",
+      "9.52551472374\n",
+      "O intervalo de confianca esta entre 6.113233621114376 e 9.525514723739372\n"
+     ]
+    }
+   ],
+   "source": [
+    "xdp = []\n",
+    "for i in range(10000):\n",
+    "    re = np.random.choice(dados, size = 36, replace = True)\n",
+    "    xdp.append(np.std(re, ddof = 1))\n",
+    "    \n",
+    "\n",
+    "xdp = pd.Series(xdp)\n",
+    "xmax = np.percentile(xdp, 100-2.5)\n",
+    "xmin = np.percentile(xdp, 2.5)\n",
+    "print(xmin)\n",
+    "print(xmax)\n",
+    "print('O intervalo de confianca esta entre {0} e {1}'.format(xmin,xmax))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como o o entervalo de confiaça < 10 ml , não à nessecidade de parar a produção ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "dados = [1014,1043,1028,1018,1050,1001,1020,1017,1029,1041,1027,1030,1033]\n",
     "dados = pd.Series(dados)\n",
@@ -142,18 +150,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
   }
  },
  "nbformat": 4,
