--- a/Aps 7.ipynb
+++ b/Aps 7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -24,8 +24,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A)\n",
+    "H0 =< 90\n",
+    "H1 > 90\n",
+    "\n",
+    "B)\n",
+    "Erro 1: Quando apontam Curitiba como uma mais poluída que uma outra cidade poluída , sendo que ela não é.\n",
+    "Erro II: Quando apontam Curitiba como não sendo mais poluída que uma outra cidade poluída , quando na verdade ela é mais poluida."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94.382625889231392"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=16\n",
+    "xcritico=stats.t.ppf(0.95, df=n-1, loc=90, scale=10/4)\n",
+    "xcritico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rejeitamos o H0 (=<90 ) pois curitiba é em fato mais poluida que outra cidade qualquer poluida."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99999999999999967"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value=1-stats.t.cdf(0.95, df=15, loc=90, scale=10/4)\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "p_value é maior que alpha , então rejeitamos H0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "X  deve ser uma normal para que o media de x seja uma normal. \n",
+    "Assim a normal tera uma padronização tera uma distribuição em T-Studants."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma amostra retirada de dias consecutivos pode comprometer a pesquisa . A amostra tem que ser retirada de dias aleatórios para manter a qualidade da pesquisa.}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -51,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.11323362111\n",
-      "9.52551472374\n",
-      "O intervalo de confianca esta entre 6.113233621114376 e 9.525514723739372\n"
+      "6.10551793105\n",
+      "9.53259037259\n",
+      "O intervalo de confianca esta entre 6.1055179310467 e 9.532590372590482\n"
      ]
     }
    ],
@@ -106,9 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1020.1538461538462\n",
+      "1033.8461538461538\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAD8CAYAAABw1c+bAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAETVJREFUeJzt3G2MXFd9x/Hvv2vSGCNqIGWb2i7rF1bRwqrC3Rr3AbQq\nrWQnqE7Fm0SASVTJtZTwUC1qF1QEfVMBIi1EiWJZ4IaIh0ikVLXqbdMnRhVVk+axcYxrsRi3tjEN\nCBHYRCVd8e+LuW4n493snd2Zvbtzvh9p5LnnnjP3/HN2f7lzd+ZGZiJJKsdPND0BSdLaMvglqTAG\nvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9JhdnU9AQWc8011+TY2Fgjx3722WfZsmVLI8ce\nNGvbuIa5Pmvrj0cfffS7mfnTdfquy+AfGxvjkUceaeTYrVaLqampRo49aNa2cQ1zfdbWHxHxH3X7\neqlHkgpj8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TC1Ar+iNgXEWciYi4iZhbZ/9qI+JeI+FFE\nvL+XsZKktbVs8EfECHAXsB8YB26KiPGubt8D3gN8YgVjJUlrqM43d/cAc5l5FiAi7gMOAF+73CEz\nnwaejojrex0rrcTYzIkXbE9PLHBzV9swuWffcN7SQM2oc6lnG3C+Y/tC1VbHasZKkgZg3dyrJyIO\nAYcARkdHabVajcxjfn6+sWMP2jDVNj2x8ILt0c1Xtg2TYVq7bta29uoE/0VgR8f29qqtjtpjM/Mo\ncBRgcnIym7ppkzeM2hi6L+tMTyxw+8l1cx7Td/fs2zI0a9dtmH4uu63X2upc6nkY2BUROyPiKuBG\n4HjN11/NWEnSACx7ipSZCxFxG/AAMAIcy8xTEXG42n8kIn4GeAR4OfDjiHgfMJ6ZP1hs7KCKkSQt\nr9Z748ycBWa72o50PP827cs4tcZKkprjN3clqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqM\nwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8\nklQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9J\nhakV/BGxLyLORMRcRMwssj8i4o5q/5MRsbtj3+9FxKmIeCoivhgRV/ezAElSb5YN/ogYAe4C9gPj\nwE0RMd7VbT+wq3ocAu6uxm4D3gNMZubrgRHgxr7NXpLUszpn/HuAucw8m5nPA/cBB7r6HADuzbYH\nga0RcW21bxOwOSI2AS8FvtWnuUuSVqBO8G8DzndsX6jalu2TmReBTwD/CVwCnsnMv135dCVJq7Vp\nkC8eEa+g/W5gJ/B94EsR8Y7M/NwifQ/RvkzE6OgorVZrkFNb0vz8fGPHHrRhqm16YuEF26Obr2wb\nJsO0dt2sbe3VCf6LwI6O7e1VW50+vwF8MzO/AxARXwZ+Bbgi+DPzKHAUYHJyMqempupV0GetVoum\njj1ow1TbzTMnXrA9PbHA7ScHeh7TqHv2bRmates2TD+X3dZrbXUu9TwM7IqInRFxFe0/zh7v6nMc\nOFh9umcv7Us6l2hf4tkbES+NiADeApzu4/wlST1a9hQpMxci4jbgAdqfyjmWmaci4nC1/wgwC1wH\nzAHPAbdU+x6KiPuBx4AF4HGqs3pJUjNqvTfOzFna4d7ZdqTjeQK3LjH2w8CHVzFHSVIf+c1dSSqM\nwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8\nklQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9J\nhTH4JakwBr8kFWZT0xPQxjU2c6LpKUhaAc/4JakwBr8kFcbgl6TC1Ar+iNgXEWciYi4iZhbZHxFx\nR7X/yYjY3bFva0TcHxH/HhGnI+KX+1mAJKk3ywZ/RIwAdwH7gXHgpogY7+q2H9hVPQ4Bd3fs+xTw\nN5n5WuAXgNN9mLckaYXqnPHvAeYy82xmPg/cBxzo6nMAuDfbHgS2RsS1EfFTwJuBzwBk5vOZ+f0+\nzl+S1KM6wb8NON+xfaFqq9NnJ/Ad4M8i4vGI+HREbFnFfCVJqzToz/FvAnYD787MhyLiU8AM8KHu\njhFxiPZlIkZHR2m1WgOe2uLm5+cbO/ag9bu26YmFvr3Wao1uXl/z6Td/Ljem9VpbneC/COzo2N5e\ntdXpk8CFzHyoar+fdvBfITOPAkcBJicnc2pqqsbU+q/VatHUsQet37XdvI6+wDU9scDtJ4f3+4j3\n7Nviz+UGtF5rq3Op52FgV0TsjIirgBuB4119jgMHq0/37AWeycxLmflt4HxE/HzV7y3A1/o1eUlS\n75Y9RcrMhYi4DXgAGAGOZeapiDhc7T8CzALXAXPAc8AtHS/xbuDz1f80znbtkyStsVrvjTNzlna4\nd7Yd6XiewK1LjH0CmFzFHCVJfeQ3dyWpMAa/JBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mF\nMfglqTAGvyQVZnhvZygNkZMXn2nsbqjnPnp9I8fV4HjGL0mFMfglqTAGvyQVxuCXpMIY/JJUGINf\nkgpj8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWp\nMAa/JBXG4Jekwhj8klSYWsEfEfsi4kxEzEXEzCL7IyLuqPY/GRG7u/aPRMTjEfFX/Zq4JGlllg3+\niBgB7gL2A+PATREx3tVtP7CrehwC7u7a/17g9KpnK0latTpn/HuAucw8m5nPA/cBB7r6HADuzbYH\nga0RcS1ARGwHrgc+3cd5S5JWqE7wbwPOd2xfqNrq9vkk8PvAj1c4R0lSH20a5ItHxFuBpzPz0YiY\nWqbvIdqXiRgdHaXVag1yakuan59v7NiD1u/apicW+vZaqzW6eX3Np9+arG/Qvw/+zq29OsF/EdjR\nsb29aqvT523Ab0XEdcDVwMsj4nOZ+Y7ug2TmUeAowOTkZE5NTdWtoa9arRZNHXvQ+l3bzTMn+vZa\nqzU9scDtJwd6HtOoJus79/apgb6+v3Nrr86lnoeBXRGxMyKuAm4Ejnf1OQ4crD7dsxd4JjMvZeYH\nMnN7Zo5V4/5xsdCXJK2dZU8hMnMhIm4DHgBGgGOZeSoiDlf7jwCzwHXAHPAccMvgpixJWo1a7x0z\nc5Z2uHe2Hel4nsCty7xGC2j1PENJUl/5zV1JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj\n8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/\nJBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUmE1NT0CrNzZz\nola/6YkFbq7ZV9Lw8oxfkgpTK/gjYl9EnImIuYiYWWR/RMQd1f4nI2J31b4jIr4SEV+LiFMR8d5+\nFyBJ6s2ywR8RI8BdwH5gHLgpIsa7uu0HdlWPQ8DdVfsCMJ2Z48Be4NZFxkqS1lCdM/49wFxmns3M\n54H7gANdfQ4A92bbg8DWiLg2My9l5mMAmflD4DSwrY/zlyT1qE7wbwPOd2xf4MrwXrZPRIwBbwAe\n6nWSkqT+WZNP9UTEy4A/B96XmT9Yos8h2peJGB0dpdVqrcXUrjA/P9/YsVdqemKhVr/RzfX7bjTD\nXBs0W9+gfx824u9cXeu1tjrBfxHY0bG9vWqr1SciXkI79D+fmV9e6iCZeRQ4CjA5OZlTU1M1ptZ/\nrVaLpo69UnU/ojk9scDtJ4fzE7zDXBs0W9+5t08N9PU34u9cXeu1tjqXeh4GdkXEzoi4CrgRON7V\n5zhwsPp0z17gmcy8FBEBfAY4nZl/0teZS5JWZNlTiMxciIjbgAeAEeBYZp6KiMPV/iPALHAdMAc8\nB9xSDf9V4J3AyYh4omr7YGbO9rcMSVJdtd47VkE929V2pON5ArcuMu6rQKxyjpKkPvKbu5JUGINf\nkgpj8EtSYYb382+S+qLu3V9Xaqm7xp776PUDPW7JPOOXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9J\nhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8klQY\ng1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVZlPTExgWYzMnmp6CJNXiGb8kFcbgl6TCeKlH0rrU\n5OXTcx+9vrFjr4VaZ/wRsS8izkTEXETMLLI/IuKOav+TEbG77lhJ0tpaNvgjYgS4C9gPjAM3RcR4\nV7f9wK7qcQi4u4exkqQ1VOeMfw8wl5lnM/N54D7gQFefA8C92fYgsDUirq05VpK0hupc498GnO/Y\nvgC8sUafbTXH9tVqrwtOTyxwsx/NlIrWr78v9Jona/W3hXXzx92IOET7MhHAfEScaWIe74FrgO82\ncexBs7aNa5jrs7b/Fx9b1eFeU7djneC/COzo2N5etdXp85IaYwHIzKPA0RrzGaiIeCQzJ5uexyBY\n28Y1zPVZ29qrc43/YWBXROyMiKuAG4HjXX2OAwerT/fsBZ7JzEs1x0qS1tCyZ/yZuRARtwEPACPA\nscw8FRGHq/1HgFngOmAOeA645cXGDqQSSVItta7xZ+Ys7XDvbDvS8TyBW+uOXecav9w0QNa2cQ1z\nfda2xqKd2ZKkUnivHkkqzNAHf0Qci4inI+KpjrZXRsTfRcTXq39fUbW/KiK+EhHzEXFn1+u0qltP\nPFE9Xr3WtSymx/p+MyIejYiT1b+/3jHmF6v2uer2G9FEPZ36WNu6W7sea9vTMfd/i4jf7hiz0dft\nxWpbd+sGvdXXsf/nqlx5f0dbc2uXmUP9AN4M7Aae6mj7ODBTPZ8BPlY93wL8GnAYuLPrdVrAZNP1\nrLK+NwA/Wz1/PXCxY8y/AnuBAP4a2D9Eta27teuxtpcCm6rn1wJPd2xv9HV7sdrW3br1Wl/H/vuB\nLwHv72hrbO2G/ow/M/8J+F5X8wHgs9XzzwI3VH2fzcyvAv+9djNcnR7rezwzv1W1nwI2R8RPRvv2\nGi/PzAez/RN57+UxTepHbWsy0RXosbbnMnOhar8aSIAhWbdFa1vPeqkPICJuAL5J++fyclujazf0\nwb+E0Wx/zwDg28BozXGfrd5yfmg9vKV+EXXqexvwWGb+iPatNS507Lt8y431qNfaLtsIa7dkbRHx\nxog4BZwEDldhORTrtkRtl22EdYMl6ouIlwF/APxRV/9G167U4P8/1f9t65xlvD0zXwe8qXq8c6AT\n65PF6ouI1wEfA363kUn1SQ+1bbi1664tMx+qavgl4AMRcXVjk1ulHmrbcOsGV9T3EeBPM3O+uRld\nqdTg/6/qrdblt1xPLzcgMy9W//4Q+ALtO4+uV0vWFxHbgb8ADmbmN6rmi7Rvp3HZkrfWWAd6rW0j\nrd2yP5eZeRqYp/o7BkOwbpd11baR1g2Wru+NwMcj4hzwPuCD0f5Sa6NrV2rwHwfeVT1/F/CXL9Y5\nIjZFxDXV85cAbwWeerExDVu0vojYCpyg/Ueof77cuXqL+oOI2Fu9nT7IMv9NGtRTbRts7ZaqbWdE\nbKqevwZ4LXBuSNZt0do22LrBEvVl5psycywzx4BPAn+cmXc2vnZr9Vfkph7AF4FLwP/Qvo72O8Cr\ngH8Avg78PfDKjv7naP/hZr7qP0770z6PAk/S/gPNp4CRpmvrtT7gD4FngSc6Hq+u9k3S/sX6BnAn\n1Zf7Nnpt63XteqztndXcnwAeA27oeJ2Nvm6L1rZe163X+rrGfYQXfqqnsbXzm7uSVJhSL/VIUrEM\nfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8klQYg1+SCvO/VODQMHfhJoUAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1d0a1b05128>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dados = [1014,1043,1028,1018,1050,1001,1020,1017,1029,1041,1027,1030,1033]\n",
     "dados = pd.Series(dados)\n",
@@ -150,6 +254,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
